# VotingApp

./: README.md  dbproxy.py  email_content.txt  main.py  models.py  pyproject.toml  sendcodes.py  test.db  validate.py
static/: auth.js  ballot.js  create.html  create.js  dom.js  edit.html  edit.js  election.js  index.html  readform.js  renderform.js  requests.js  results.html  results.js  style.css  submit.js  vote.html
