[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "votingtest"
version = "0.1.0"
[tool.poetry.dependencies]
flask = "^1.1"
flask-jwt = "^0.3.2"
flask-sqlalchemy = "^2.4"
python = "^3.7"
sqlalchemy = "^1.3"
werkzeug = "^1.0"
[tool.poetry.dev-dependencies]
